k8s/sd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sd
  name: sd
spec:
  ports:
  - port: 7860
    protocol: TCP
    targetPort: 7860
  selector:
    app: sd
status:
  loadBalancer: {}
